@@ -217,9 +217,6 @@ void FetchSelfTestReplayPage::makeActive( char inFresh ) {
     mWebRequest = startWebRequestSerial( "GET", 
                                    fullRequestURL, 
                                    NULL );
-    
-    printf( "Starting web request with URL %s\n", 
-            fullRequestURL );
 
     delete [] fullRequestURL;
     
